fix overflow problem

--- a/app/assets/stylesheets/centers.css.scss
+++ b/app/assets/stylesheets/centers.css.scss
@@ -30,7 +30,6 @@ html, body, #map_canvas {
   height: 100%;
 }
 
-// #directions-panel {
-//   height: 500px !important;
-//   width: 200px !important;
-// }
+.overflow-y-scroll {
+  overflow-y: scroll;
+}
